--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -9,6 +9,7 @@
     margin: auto;
     margin-bottom: 1rem;
     max-width: 1280px;
+    padding: 0 1.5rem;
     .site-logo {
         margin: 0 1rem;
         .custom-logo-link {
