--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -61,6 +61,9 @@
         padding: 0 1rem 0 0;
         .menu-item {
             margin: 0.25rem 1rem;
+            a{
+                white-space: nowrap;
+            }
         }
         .current-menu-item a {
             color: $brand-color;
@@ -73,7 +76,7 @@
         .menu-item-has-children {
             margin-top: 0;
             position: relative;
-            width: 100%;
+            width: 5rem;
             &>a {
                 display: none;
             }
