--- a/stylesheets/abstracts/_variables.scss
+++ b/stylesheets/abstracts/_variables.scss
@@ -36,15 +36,18 @@ $dark-grey: rgb(68, 68, 68) !default;
 /// Yellow
 /// @type Color
 $yellow: #F2C94C !default;
-/// Container's maximum width
 /// Red
 /// @type Color
 $red: #F1B1B1 !default;
-/// Container's maximum width
-/// @type Length
+/// Green
+/// @type Color
+$green: #81D5A4 !default;
 /// Backgroung Gradient
 $bkg-gradient: linear-gradient(43deg, #e9e9e9 0%, #cbf2fd 46%, #f8efff 100%);
 
+
+/// Container's maximum width
+/// @type Length
 $max-width: 1280px !default;
 /// Breakpoints map
 /// @prop {String} keys - Keys are identifiers mapped to a given length
