--- a/stylesheets/pages/_article.scss
+++ b/stylesheets/pages/_article.scss
@@ -273,9 +273,9 @@ BACKGROUND COLORS
 .ps-ifpr.order-7,
 .ps-ifpr.order-14,
 .nespresso-page.order-3,
-.nespresso-page.order-10,
-.nespresso-page.order-13,
-.nespresso-page.order-7 {
+.nespresso-page.order-8,
+.nespresso-page.order-11,
+.nespresso-page.order-15{
     background-color: $text-color;
     color: $light-grey;
     a {
@@ -285,17 +285,16 @@ BACKGROUND COLORS
 
 
 /* WHITE BACKGROUND */
-
-.ps-ifpr.order-1,
+.order-1,
 .ps-ifpr.order-4,
 .ps-ifpr.order-8,
 .ps-ifpr.order-9,
 .ps-ifpr.order-12,
 .nespresso-page.order-1,
 .nespresso-page.order-4,
-.nespresso-page.order-11,
-.nespresso-page.order-14,
-.nespresso-page.order-8 {
+.nespresso-page.order-9,
+.nespresso-page.order-12,
+.nespresso-page.order-16 {
     background-color: #fff;
 }
 
@@ -304,17 +303,28 @@ BACKGROUND COLORS
 
 .nespresso-page.order-2,
 .nespresso-page.order-5,
-.nespresso-page.order-9,
-.nespresso-page.order-12,
+.nespresso-page.order-7,
+.nespresso-page.order-10,
+.nespresso-page.order-13,
+.nespresso-page.order-14,
+.nespresso-page.order-17,
 .nespresso-page.order-6 {
     background-color: $red;
 }
 
-.part-four {
+/* REDITEC GREEN BACKGROUND */
+.reditec.order-2{
+    background-color: $green;
+}
+
+.ps-ifpr.order-2,
+.ps-ifpr.order-10,
+.ps-ifpr.order-13,
+.ps-ifpr.order-5{
     background: $yellow;
 }
 
-.part-five {
+.ps-ifpr.order-11 {
     background: $text-color;
     background: linear-gradient(180deg, $text-color 25rem, #fff 25rem);
     h2 {
@@ -333,10 +343,6 @@ BACKGROUND COLORS
     @media (max-width: map-get($breakpoints, medium)) {
         background: linear-gradient(176deg, $text-color 20rem, #fff 20rem);
     }
-}
-
-.part-final {
-    background-color: $brand-light-color;
 }
 
 .small-title {
