--- a/stylesheets/pages/_article.scss
+++ b/stylesheets/pages/_article.scss
@@ -420,3 +420,8 @@ BACKGROUND COLORS
 .wp-block-image.aligncenter {
     width: 100%;
 }
+
+.of-hidden{
+    height:25rem;
+    overflow-y: hidden;
+}
