--- a/stylesheets/pages/_home.scss
+++ b/stylesheets/pages/_home.scss
@@ -65,6 +65,7 @@
     max-width: 1280px;
     padding: 0 1.5rem;
     @media (max-width: map-get($breakpoints, medium)) {
+        padding: 0;
         grid-template-columns: repeat(auto-fill, 100%);
     }
 }
