--- a/stylesheets/pages/_article.scss
+++ b/stylesheets/pages/_article.scss
@@ -268,6 +268,9 @@ BACKGROUND COLORS
 
 /* DARK GREY BACKGROUND */
 
+.reditec.order-3,
+.reditec.order-6,
+.reditec.order-11,
 .ps-ifpr.order-3,
 .ps-ifpr.order-6,
 .ps-ifpr.order-7,
@@ -285,6 +288,10 @@ BACKGROUND COLORS
 
 
 /* WHITE BACKGROUND */
+.reditec.order-4,
+.reditec.order-7,
+.reditec.order-8,
+.reditec.order-12,
 .order-1,
 .ps-ifpr.order-4,
 .ps-ifpr.order-8,
@@ -313,7 +320,10 @@ BACKGROUND COLORS
 }
 
 /* REDITEC GREEN BACKGROUND */
-.reditec.order-2{
+.reditec.order-2,
+.reditec.order-9,
+.reditec.order-10,
+.reditec.order-5{
     background-color: $green;
 }
 
