--- a/style.css
+++ b/style.css
@@ -1528,6 +1528,16 @@ table tbody td {
   padding: 0.25rem;
 }
 
+.quote {
+  background: url(assets/imgs/quotes.svg) top left no-repeat, url(assets/imgs/quotes-right.svg) bottom right no-repeat;
+  background-size: 2rem;
+  padding: 2rem;
+  margin: 1rem auto 0 auto;
+}
+.quote p {
+  margin: 0;
+}
+
 .about {
   max-width: calc(1280px - 2rem);
   margin: 1rem auto;
