--- a/style.css
+++ b/style.css
@@ -1554,6 +1554,16 @@ table tbody td {
   margin: 0;
 }
 
+.quote-grey {
+  background: url(assets/imgs/quotes-grey.svg) top left no-repeat, url(assets/imgs/quotes-right-grey.svg) bottom right no-repeat;
+  background-size: 2rem;
+  padding: 2rem;
+  margin: 1rem auto 0 auto;
+}
+.quote-grey p {
+  margin: 0;
+}
+
 .about {
   max-width: calc(1280px - 2rem);
   margin: 1rem auto;
