--- a/stylesheets/pages/_article.scss
+++ b/stylesheets/pages/_article.scss
@@ -492,3 +492,13 @@ table{
         margin: 0;
     }
 }
+
+.quote-grey{
+    background: url(assets/imgs/quotes-grey.svg) top left no-repeat, url(assets/imgs/quotes-right-grey.svg) bottom right no-repeat;
+    background-size: 2rem;
+    padding: 2rem;
+    margin: 1rem auto 0 auto;
+    p{
+        margin: 0;
+    }
+}
