--- a/style.css
+++ b/style.css
@@ -849,6 +849,11 @@ blockquote p {
   background-size: 1rem;
   margin-right: 1rem;
 }
+.site-footer .site-info {
+  padding: 0 1rem;
+  color: #e0e0e0;
+  text-align: center;
+}
 .site-footer .site-info a {
   color: #66CCFF;
 }
@@ -1003,13 +1008,6 @@ blockquote p {
   padding: 1rem;
 }
 
-.site-info {
-  padding: 0 1rem;
-  background-color: #333;
-  color: #e0e0e0;
-  text-align: center;
-}
-
 .site {
   background: rgb(235, 243, 255);
   background-repeat: no-repeat, no-repeat;
@@ -1019,7 +1017,7 @@ blockquote p {
 .site.bk-1 {
   background-image: url(assets/imgs/cat.svg), linear-gradient(43deg, #e9e9e9 0%, #cbf2fd 46%, #f8efff 100%);
   background-position: calc(80vw - 8rem) bottom, 0;
-  background-size: 4rem, auto, 32rem;
+  background-size: 4rem, auto;
 }
 @media (max-width: 768px) {
   .site.bk-1 {
@@ -1028,8 +1026,8 @@ blockquote p {
 }
 .site.bk-2 {
   background-image: url(assets/imgs/dog.svg), linear-gradient(43deg, #e9e9e9 0%, #cbf2fd 46%, #f8efff 100%);
-  background-position: calc(80vw - 12rem) bottom, 0;
-  background-size: 12rem, auto, 32rem;
+  background-position: calc(80vw - 12rem) calc(100% + 1px), 0;
+  background-size: 12rem, auto;
 }
 @media (max-width: 768px) {
   .site.bk-2 {
@@ -1038,7 +1036,7 @@ blockquote p {
 }
 .site.bk-3 {
   background-image: url(assets/imgs/park.svg), linear-gradient(43deg, #e9e9e9 0%, #cbf2fd 46%, #f8efff 100%);
-  background-size: 13rem, auto, 32rem;
+  background-size: 13rem, auto;
   background-position: calc(80vw - 15rem) bottom, 0;
 }
 @media (max-width: 768px) {
@@ -1047,9 +1045,9 @@ blockquote p {
   }
 }
 .site.bk-4 {
-  background-image: url(assets/imgs/cat.svg), linear-gradient(43deg, #e9e9e9 0%, #cbf2fd 46%, #f8efff 100%);
-  background-position: calc(80vw - 8rem) bottom, 0;
-  background-size: 4rem, auto, 32rem;
+  background-image: url(assets/imgs/boy-ball.svg), linear-gradient(43deg, #e9e9e9 0%, #cbf2fd 46%, #f8efff 100%);
+  background-size: 10rem, auto;
+  background-position: calc(80vw - 15rem) calc(100% + 1px), 0;
 }
 @media (max-width: 768px) {
   .site.bk-4 {
