--- a/stylesheets/layout/_footer.scss
+++ b/stylesheets/layout/_footer.scss
@@ -45,6 +45,9 @@
 }
 
 .site-info {
+    padding: 0 1rem;
+    color: $light-grey;
+    text-align: center;
     a {
         color: $link-color-dark;
     }
